# SAM_s600

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  NOTICE  README.md
apps/: cli_common.cpp  sam3_benchmark.cpp  sam3_camera.cpp  sam3_image.cpp  sam3_image_interactive.cpp  sam3_multiplex_video.cpp  sam3_rtsp.cpp  sam3_video.cpp  sam3_video_tracking.cpp
benchmarks/: README.md  sam3_image.md  sam3_multiplex.md  sam3_video.md
configs/calibration/: README.md
configs/manifests/: README.md  sam3_image.yaml  sam3_image_resident.yaml  sam3_image_resident_bf16.yaml  sam3_image_resident_fp16.yaml
configs/serve/: README.md
docs/: README.md  architecture.md  image_inference.md  license_and_weights.md  memory_model.md  model_export.md  model_partitioning.md  multiplex_tracking.md  performance_tuning.md  s600_bpu_runtime.md  sam3_capability_matrix.md  video_inference.md
examples/camera/: README.md
examples/image_box_prompt/: README.md
examples/image_exemplar_prompt/: README.md
examples/image_mask_prompt/: README.md
examples/image_point_prompt/: README.md
examples/image_text_prompt/: README.md
examples/rtsp/: README.md
examples/video_multiplex/: README.md
examples/video_point_prompt/: README.md
examples/video_text_prompt/: README.md
examples/video_tracking/: README.md
include/sam_s600/bpu/: bpu_allocator.hpp  bpu_context.hpp  bpu_model.hpp
include/sam_s600/core/: tensor.hpp
include/sam_s600/multiplex/: multiplex_detector.hpp  multiplex_state.hpp  multiplex_video_predictor.hpp
include/sam_s600/postprocess/: box_ops.hpp  mask_ops.hpp  nms.hpp  visualization.hpp
include/sam_s600/sam3/: sam3_config.hpp  sam3_manifest.hpp  sam3_model.hpp  sam3_output.hpp  sam3_prompt.hpp  sam3_request.hpp  sam3_video_predictor.hpp
include/sam_s600/sam3_modules/: image_encoder.hpp  mask_decoder.hpp  memory_encoder.hpp
models/: README.md
models/manifests/: sam3_full.yaml  sam3_image.yaml  sam3_multiplex.yaml  sam3_video.yaml
scripts/: build_release.sh
src/bpu/: bpu_allocator.cpp  bpu_model.cpp
src/csrc/: CMakeLists.txt
src/csrc/bpu/: bpu_allocator.cpp  bpu_context.cpp  bpu_model.cpp
src/csrc/cli/: manifest_cli.cpp
src/csrc/cmake/: CompilerOptions.cmake
src/csrc/core/: profiler.cpp
src/csrc/include/sam_s600/bpu/: bpu_allocator.hpp  bpu_pipeline.hpp  bpu_tensor.hpp
src/csrc/include/sam_s600/cli/: manifest_cli.hpp
src/csrc/include/sam_s600/core/: error.hpp  image.hpp  profiler.hpp  tensor.hpp
src/csrc/include/sam_s600/multiplex/: multiplex_tracker.hpp
src/csrc/include/sam_s600/sam3/: sam3_image_predictor.hpp  sam3_processor.hpp  sam3_tokenizer.hpp
src/csrc/include/sam_s600/sam3_modules/: detector.hpp  geometry_encoder.hpp  text_encoder.hpp  tracker.hpp  vl_fusion.hpp
src/csrc/sam3/: sam3_image_predictor.cpp  sam3_model.cpp  sam3_processor.cpp  sam3_tokenizer.cpp
src/multiplex/: multiplex_video_predictor.cpp
src/postprocess/: mask_ops.cpp
src/python/: pyproject.toml
src/python/sam_s600_tools/: __init__.py
src/python/sam_s600_tools/benchmark/: __init__.py  parse.py
src/python/sam_s600_tools/convert/: __init__.py  output_precision.py  selective_fp16.py  strip_roialign.py
src/python/sam_s600_tools/download/: __init__.py
src/python/sam_s600_tools/export/: __init__.py  contract.py  detector.py  image_encoder.py  mask_decoder.py  multiplex.py  onnx.py  text_encoder.py  video_tracker.py
src/python/sam_s600_tools/export/factories/: __init__.py  transformers.py
src/python/sam_s600_tools/manifest/: __init__.py  generate.py
src/python/scripts/: bench_full_detector.sh  compile_full_detector_matrix.sh  compile_hbm.sh  compile_resident_precision.sh  download_demo_assets.py  monitor_bpu.sh  run_benchmark.sh  run_image_demo.sh  run_video_demo.sh  setup_s600.sh  validate_hbm.sh
src/sam3/: sam3_image_predictor.cpp  sam3_manifest.cpp  sam3_model.cpp  sam3_video_predictor.cpp
tests/: bpu_allocator_smoke.cpp  sam3_image_predictor_smoke.cpp  sam3_multiplex_video_cli_smoke.cpp  sam3_video_cli_smoke.cpp
tests/csrc/: CMakeLists.txt  bpu_allocator_smoke.cpp  sam3_image_predictor_smoke.cpp  sam3_multiplex_video_cli_smoke.cpp  sam3_multiplex_video_predictor_smoke.cpp  sam3_video_cli_smoke.cpp  sam3_video_predictor_smoke.cpp
tests/python/: README.md
tools/benchmark/: run_sam3_image_benchmark.sh  run_sam3_video_benchmark.sh
tools/convert/: compile_sam3_resident_precision.sh  convert_onnx_precision.py  convert_sam3_to_hbm.sh  generate_model_manifest.py  strip_roialign_for_hbdk.py
tools/download/: download_sam3_weights.py
tools/export/: export_sam3_detector.py  export_sam3_image_encoder.py  export_sam3_mask_decoder.py  export_sam3_multiplex.py  export_sam3_onnx.py  export_sam3_text_encoder.py  export_sam3_video_tracker.py  fake_sam3_factory.py  sam3_export_contract.py
