add_executable(bpu_allocator_smoke bpu_allocator_smoke.cpp)
target_link_libraries(bpu_allocator_smoke PRIVATE sam_s600::sam_s600)
target_apply_sam_s600_warnings(bpu_allocator_smoke)
add_test(NAME bpu_allocator_smoke COMMAND bpu_allocator_smoke)

add_executable(sam3_image_predictor_smoke sam3_image_predictor_smoke.cpp)
target_link_libraries(sam3_image_predictor_smoke PRIVATE sam_s600::sam_s600)
target_apply_sam_s600_warnings(sam3_image_predictor_smoke)
add_test(NAME sam3_image_predictor_smoke COMMAND sam3_image_predictor_smoke)

add_executable(sam3_video_predictor_smoke sam3_video_predictor_smoke.cpp)
target_link_libraries(sam3_video_predictor_smoke PRIVATE sam_s600::sam_s600)
target_apply_sam_s600_warnings(sam3_video_predictor_smoke)
add_test(NAME sam3_video_predictor_smoke COMMAND sam3_video_predictor_smoke)

add_executable(sam3_video_cli_smoke sam3_video_cli_smoke.cpp)
target_compile_definitions(sam3_video_cli_smoke PRIVATE SAM_S600_SOURCE_DIR="${PROJECT_SOURCE_DIR}")
target_link_libraries(sam3_video_cli_smoke PRIVATE sam_s600::cli)
target_apply_sam_s600_warnings(sam3_video_cli_smoke)
add_test(NAME sam3_video_cli_smoke COMMAND sam3_video_cli_smoke)

add_executable(sam3_multiplex_video_predictor_smoke sam3_multiplex_video_predictor_smoke.cpp)
target_link_libraries(sam3_multiplex_video_predictor_smoke PRIVATE sam_s600::sam_s600)
target_apply_sam_s600_warnings(sam3_multiplex_video_predictor_smoke)
add_test(NAME sam3_multiplex_video_predictor_smoke COMMAND sam3_multiplex_video_predictor_smoke)

add_executable(sam3_multiplex_video_cli_smoke sam3_multiplex_video_cli_smoke.cpp)
target_compile_definitions(sam3_multiplex_video_cli_smoke PRIVATE SAM_S600_SOURCE_DIR="${PROJECT_SOURCE_DIR}")
target_link_libraries(sam3_multiplex_video_cli_smoke PRIVATE sam_s600::cli)
target_apply_sam_s600_warnings(sam3_multiplex_video_cli_smoke)
add_test(NAME sam3_multiplex_video_cli_smoke COMMAND sam3_multiplex_video_cli_smoke)
